fix upcoming launch card overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -34,7 +34,7 @@ html {
       .col {
         flex-direction: column;
         display: flex;
-        flex: 1;
+        flex-grow: 1;
         .card {
           flex: 1;
           flex-direction: column;
